RESOLVED FIXED305787
AX: ::first-letter text not exposed in the accessibility tree if no other text accompanies it
https://bugs.webkit.org/show_bug.cgi?id=305787
Summary AX: ::first-letter text not exposed in the accessibility tree if no other tex...
Tyler Wilcock
Reported 2026-01-19 11:28:30 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-19 11:28:36 PST
Tyler Wilcock
Comment 2 2026-01-19 12:30:29 PST
EWS
Comment 3 2026-01-20 08:27:47 PST
Committed 305884@main (5d9333017797): <https://commits.webkit.org/305884@main> Reviewed commits have been landed. Closing PR #56850 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.